--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "scripts": {
     "build": "tsc",
-    "dev:start": "ts-node-dev --transpileOnly --ignore-whatch node_modules ./src/main.ts"
+    "dev:start": "ts-node-dev --respawn --transpile-only --ignore-watch node_modules ./src/main.ts"
   },
   "devDependencies": {
     "@types/express": "^4.17.11",
