--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "dev:start": "ts-node-dev --respawn --transpile-only --ignore-watch node_modules ./src/main.ts"
   },
   "devDependencies": {
+    "@types/bull": "^3.15.7",
     "@types/express": "^4.17.11",
     "@typescript-eslint/eslint-plugin": "^4.13.0",
     "@typescript-eslint/parser": "^4.13.0",
@@ -18,6 +19,11 @@
     "typescript": "^4.1.3"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "bull": "^4.1.4",
+    "dotenv": "^10.0.0",
+    "express": "^4.17.1",
+    "mailtrap": "^2.0.2",
+    "pg": "^8.7.1",
+    "typeorm": "^0.2.41"
   }
 }
