--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "devDependencies": {
     "@types/bull": "^3.15.7",
     "@types/express": "^4.17.11",
+    "@types/nodemailer": "^6.4.4",
     "@typescript-eslint/eslint-plugin": "^4.13.0",
     "@typescript-eslint/parser": "^4.13.0",
     "eslint": "^7.17.0",
@@ -22,7 +23,7 @@
     "bull": "^4.1.4",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "mailtrap": "^2.0.2",
+    "nodemailer": "^6.7.2",
     "pg": "^8.7.1",
     "typeorm": "^0.2.41"
   }
