--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "scripts": {
     "build": "tsc",
-    "dev:start": "ts-node-dev --respawn --transpile-only --ignore-watch node_modules ./src/main.ts"
+    "dev:start": "ts-node-dev --respawn --transpile-only --ignore-watch node_modules ./src/main.ts",
+    "dev:jobs": "ts-node-dev --respawn --transpile-only --ignore-watch node_modules ./src/jobsRun.ts"
   },
   "devDependencies": {
     "@types/bull": "^3.15.7",
@@ -21,6 +22,7 @@
   },
   "dependencies": {
     "bull": "^4.1.4",
+    "bull-board": "^2.1.3",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "nodemailer": "^6.7.2",
